extends Control


func _on_l_1b_pressed():
	Transions.change_scene("res://Sence/level_1.tscn")
	pass # Replace with function body.


func _on_l_2b_pressed():
	Transions.change_scene("res://Sence/level_2.tscn")
	pass # Replace with function body.


func _on_l_3b_pressed():
	Transions.change_scene("res://Sence/level_3.tscn")
	pass # Replace with function body.


func _on_l_4b_pressed():
	Transions.change_scene("res://Sence/level_4.tscn")
	pass # Replace with function body.


func _on_l_5b_pressed():
	Transions.change_scene("res://Sence/level_5.tscn")
	pass # Replace with function body.


func _on_back_pressed():
	Transions.change_scene("res://UI/enter_face.tscn")
	pass # Replace with function body.
